--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,7 @@
 server {
     listen 80;
+    server_tokens off;
+    error_log /var/log/nginx/error.log debug;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -12,10 +14,34 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
+    }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
         root   /var/html/frontend/;
-      }
+    }
 
+    location /api {
+        try_files $uri @proxy_api;
+    }
+
+    location /admin {
+        try_files $uri @proxy_api;
+    }
+
+    location /static/admin/ {
+        root /code/;
+    }
+
+    location /media/ {
+        root /code/;
+    }
+
+    location @proxy_api {
+        proxy_set_header X-Forwarded-Proto http;
+        proxy_set_header X-Url-Scheme $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass   http://backend;
+    }
 }
