--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        pip install -r requirements.txt --no-cache-dir
+        pip install -r backend/requirements.txt --no-cache-dir
     - name: Lint with flake8
       run: flake8 . --exclude tests,**/migrations
 
@@ -76,21 +76,19 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd app/
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
+            sudo docker-compose stop
+            sudo docker-compose rm web
             rm .env
             touch .env
-            cat <<tmp >> .env
-            DEBUG='0'
-            SECRET_KEY='${{ secrets.SECRET_KEY }}'
-            ALLOWED_HOSTS='${{ secrets.ALLOWED_HOSTS }}'
-            POSTGRES_DB='${{ secrets.POSTGRES_DB }}'
-            POSTGRES_USER='${{ secrets.POSTGRES_USER }}'
-            POSTGRES_PASSWORD='${{ secrets.POSTGRES_PASSWORD }}'
-            DB_HOST='${{ secrets.DB_HOST }}'
-            DB_PORT='${{ secrets.DB_PORT }}'
-            tmp
-            docker-compose down
-            docker pull khmaker/foodgram:latest
-            docker-compose up -d
+            sudo docker stop $(sudo docker ps -a -q)
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker-compose up -d
   send_message:
    runs-on: ubuntu-latest
    needs: deploy
