--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
 
       - uses: actions/checkout@master
 
-      - name: copy docker-compose.yaml file to remote
+      - name: copy docker-compose.yaml nginx.conf file to remote
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -83,6 +83,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd app/
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
