--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,24 +59,9 @@ jobs:
 
 
   deploy:
-    name: Deploy
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
-
-      - uses: actions/checkout@master
-
-      - name: copy docker-compose.yaml nginx.conf file to remote
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
-          overwrite: true
-          source: "./infra/docker-compose.yaml, ./infra/nginx"
-          target: "./app/"
-
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -85,14 +70,11 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd app/
+            cd infra
+            sudo docker-compose down
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
-            sudo docker-compose stop
-            sudo docker-compose rm web
-            rm .env
             touch .env
-            sudo docker stop $(sudo docker ps -a -q)
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
@@ -100,6 +82,7 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
