--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,11 +70,11 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd infra
-            sudo docker-compose down
+            sudo docker-compose stop
+            sudo docker-compose rm -f backend
+            touch .env
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
-            touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
@@ -82,6 +82,10 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
+            sudo docker-compose exec -T backend python manage.py migrate
+            sudo docker-compose exec -T backend python manage.py collectstatic --noinput
+            sudo docker-compose exec -T backend python manage.py load_data
+            sudo docker-compose exec -T backend python manage.py load_tags
 
   send_message:
     runs-on: ubuntu-latest
