--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3.8'
 services:
   frontend:
+    image: smilentag/foodgram_frontend:latest
     build:
       context: ../frontend
       dockerfile: frontend/Dockerfile
     volumes:
-      - ../frontend/:/app/result_build/
+      - ./frontend/:/app/result_build/
 
   db:
     image: postgres:13.0-alpine
@@ -17,7 +18,7 @@ services:
       - .env
 
   backend:
-    image: smilentag/foodgram:latest
+    image: smilentag/foodgram_backend:latest
     restart: always
     command: >
       sh -c "python manage.py collectstatic --noinput &&
@@ -38,10 +39,13 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ./frontend/build:/usr/share/nginx/html/
+      - ./docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/etc/nginx/html/static/
+      - media_value:/etc/nginx/html/media/
     depends_on:
       - backend
+      - frontend
 
 volumes:
   postgres_data:
