--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,9 +71,7 @@ jobs:
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
-            sudo docker-compose stop
-            sudo docker-compose rm foodgram_backend
-            sudo docker-compose rm foodgram_frontend
+            sudo docker-compose down
       - name: docker-compose up
         uses: appleboy/ssh-action@master
         with:
