--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,8 +91,10 @@ jobs:
             echo ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }} >> .env
             echo DEBUG=False >> .env
             sudo docker-compose up -d --build
-            sudo docker-compose exec -T backend python manage.py load_data
-            sudo docker-compose exec -T backend python manage.py load_tags
+            sudo docker-compose exec -T foodgram_backend python manage.py migrate
+            sudo docker-compose exec -T foodgram_backend python manage.py collectstatic --noinput
+            sudo docker-compose exec -T foodgram_backend python manage.py load_data
+            sudo docker-compose exec -T foodgram_backend python manage.py load_tags
 
   send_message:
     runs-on: ubuntu-latest
