--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,58 +1,17 @@
-version: '3.8'
+version: '3.3'
 services:
-  db:
-    image: postgres:13.0-alpine
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    env_file:
-      - .env
-
-  backend:
-    image: smilentag/foodgram_backend:latest
-    restart: always
-    command:
-      sh -c "python manage.py collectstatic --noinput &&
-      python manage.py migrate &&
-      gunicorn foodgram.wsgi:application --bind 0.0.0.0:80"
-    volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
-      - ./backend/:/app/
-    depends_on:
-      - db
-    env_file:
-      - .env
-    container_name: foodgram_backend
 
   frontend:
-    image: smilentag/foodgram_frontend:latest
     build:
-      context: ./frontend
+      context: ../frontend
       dockerfile: Dockerfile
     volumes:
-      - ./frontend/:/app/result_build/
-    depends_on:
-      - db
-    container_name: foodgram_frontend
-
+      - ../frontend/:/app/result_build/
   nginx:
-    image: nginx:1.21.3-alpine
+    image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/build:/usr/share/nginx/html/
-      - ./docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/etc/nginx/html/static/
-      - media_value:/etc/nginx/html/media/
-    depends_on:
-      - backend
-      - frontend
-    container_name: foodgram_nginx
-
-volumes:
-  postgres_data:
-  static_value:
-  media_value:
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
