--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,17 +1,52 @@
-version: '3.3'
+version: '3.8'
 services:
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+    container_name: foodgram_db
+
+  backend:
+    image: smilentag/foodgram_backend:latest
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    command: >
+      bash -c "python manage.py migrate &&
+      python manage.py collectstatic --noinput"
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+    container_name: foodgram_backend
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: smilentag/foodgram_frontend:latest
     volumes:
-      - ../frontend/:/app/result_build/
+      - ./frontend/:/app/result_build/
+    depends_on:
+      - db
+    container_name: foodgram_frontend
+
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ./frontend/build:/usr/share/nginx/html/
+      - ./docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/etc/nginx/html/static/
+      - media_value:/etc/nginx/html/media/
+    depends_on:
+      - backend
+      - frontend
+    container_name: foodgram_nginx
+
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
