--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,14 +6,17 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
-    container_name: foodgram_db
 
   backend:
-    image: smilentag/foodgram_backend:latest
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
     restart: always
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
+    ports:
+      - "8000:8000"
     command: >
       bash -c "python manage.py migrate &&
       python manage.py collectstatic --noinput"
@@ -21,32 +24,24 @@ services:
       - db
     env_file:
       - ./.env
-    container_name: foodgram_backend
 
   frontend:
-    image: smilentag/foodgram_frontend:latest
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
     volumes:
-      - ./frontend/:/app/result_build/
-    depends_on:
-      - db
-    container_name: foodgram_frontend
+      - ../frontend/:/app/result_build/
 
   nginx:
-    image: nginx:1.21.3-alpine
+    image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/build:/usr/share/nginx/html/
-      - ./docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/etc/nginx/html/static/
-      - media_value:/etc/nginx/html/media/
-    depends_on:
-      - backend
-      - frontend
-    container_name: foodgram_nginx
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
 
 volumes:
-  postgres_data:
   static_value:
   media_value:
+  postgres_data:
