--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,6 @@ services:
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
-    command: >
-      bash -c "python manage.py migrate &&
-      python manage.py collectstatic --noinput"
     depends_on:
       - db
     env_file:
@@ -26,7 +23,7 @@ services:
   frontend:
     image: smilentag/foodgram_frontend:latest
     volumes:
-      - ./frontend/:/app/result_build/
+      - ../frontend/:/app/result_build/
     depends_on:
       - db
     container_name: foodgram_frontend
@@ -37,8 +34,8 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/build:/usr/share/nginx/html/
-      - ./docs/:/usr/share/nginx/html/api/docs/
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/etc/nginx/html/static/
       - media_value:/etc/nginx/html/media/
     depends_on:
