--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-version: '3.8'
+version: '3.3'
 services:
+
   db:
     image: postgres:13.0-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - data_value:/var/lib/postgresql/data/
     env_file:
       - ./.env
-    container_name: foodgram_db
 
   backend:
     image: smilentag/foodgram_backend:latest
-    restart: always
+
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
@@ -18,32 +18,33 @@ services:
       - db
     env_file:
       - ./.env
-    container_name: foodgram_backend
 
   frontend:
     image: smilentag/foodgram_frontend:latest
+
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
       - db
-    container_name: foodgram_frontend
 
   nginx:
     image: nginx:1.21.3-alpine
+    restart: unless-stopped
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/etc/nginx/html/static/
-      - media_value:/etc/nginx/html/media/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    env_file:
+      - ./.env
     depends_on:
       - backend
       - frontend
-    container_name: foodgram_nginx
 
 volumes:
-  postgres_data:
+  data_value:
   static_value:
   media_value:
