--- a/infra/.env
+++ b/infra/.env
@@ -1,9 +1,10 @@
 TOKEN=django-insecure-qi86j65)@9rfuns=9f7oygd7(ag_kj5_9qxnx#vgsu+5uv5m5%
 DEBUG=FALSE
+ALLOWED_HOSTS=localhost
 
 DB_ENGINE=django.db.backends.postgresql # указываем, что работаем с postgresql
-DB_NAME=foodgram # имя базы данных
-POSTGRES_USER=foodgram_user # логин для подключения к базе данных
-POSTGRES_PASSWORD=12345678 # пароль для подключения к БД (установите свой)
+DB_NAME=postgres # имя базы данных
+POSTGRES_USER=postgres # логин для подключения к базе данных
+POSTGRES_PASSWORD=postgres # пароль для подключения к БД (установите свой)
 DB_HOST=db # название сервиса (контейнера)
 DB_PORT=5432 # порт для подключения к БД
