--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,44 +1,50 @@
-version: '3.8'
+version: '3.3'
 services:
+
   db:
     image: postgres:13.0-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - data_value:/var/lib/postgresql/data/
     env_file:
       - ./.env
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
-    restart: always
+    image: smilentag/foodgram_backend:latest
+
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
-    ports:
-      - "8000:8000"
     depends_on:
       - db
     env_file:
       - ./.env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: smilentag/foodgram_frontend:latest
+
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - db
 
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
+    restart: unless-stopped
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    env_file:
+      - ./.env
+    depends_on:
+      - backend
+      - frontend
 
 volumes:
+  data_value:
   static_value:
   media_value:
-  postgres_data:
