--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,26 +1,26 @@
 server {
-    listen *:80;
-    server_name _;
+    listen 80;
+    server_name 158.160.44.20;
     server_tokens off;
-    client_max_body_size 10m;
-
-    location /admin/ {
-        proxy_pass http://backend:8000/admin/;
-    }
+    client_max_body_size 20M;
 
     location /static/admin/ {
-        autoindex on;
         root /var/html/;
     }
 
-    location /media/ {
-        autoindex on;
+    location /media/recipes/ {
         root /var/html/;
     }
 
     location /static/rest_framework/ {
-        autoindex on;
         root /var/html/;
+    }
+
+    location /admin/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/admin/;
     }
 
     location /api/docs/ {
@@ -29,29 +29,22 @@ server {
     }
 
     location /api/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_pass http://backend:8000;
-    }
-
-    location /admin/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_pass http://backend:8000/admin/;
     }
 
     location / {
         root /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.html index.html;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
-
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
         root   /var/html/frontend/;
