--- a/infra/.env
+++ b/infra/.env
@@ -1,6 +1,6 @@
 TOKEN=django-insecure-qi86j65)@9rfuns=9f7oygd7(ag_kj5_9qxnx#vgsu+5uv5m5%
 DEBUG=FALSE
-ALLOWED_HOSTS=localhost
+ALLOWED_HOSTS='158.160.44.20', 'localhost', '*'
 
 DB_ENGINE=django.db.backends.postgresql # указываем, что работаем с postgresql
 DB_NAME=postgres # имя базы данных
