--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,8 @@ jobs:
           script: | 
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
-            sudo docker-compose stop 
-            sudo docker-compose rm backend 
+            sudo docker-compose down 
+            sudo docker system prune -a --volumes 
             sudo rm .env
             sudo touch .env 
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env 
