--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,23 +9,25 @@ services:
       - ./.env
 
   backend:
-    image: smilentag/foodgram_backend:latest
-
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+     - static_value:/app/static/
+     - media_value:/app/media/
     depends_on:
-      - db
+     - db
     env_file:
-      - ./.env
+     - ./.env
 
   frontend:
-    image: smilentag/foodgram_frontend:latest
-
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
     volumes:
-      - ./frontend/:/app/result_build/
+      - ../frontend/:/app/result_build/
     depends_on:
-      - db
+     - db
 
   nginx:
     image: nginx:1.21.3-alpine
@@ -33,9 +35,9 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
-      - ./frontend/build:/usr/share/nginx/html/
-      - ./docs/:/usr/share/nginx/html/api/docs/
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     env_file:
